# vm

./: .commitlintrc.yaml  .editorconfig  .gitignore  Cargo.toml  build.rs  flake.nix  justfile  result  rustfmt.toml
.github/workflows/: nix.yml
nix/dev-shells/: ci.nix  cmjava.nix
src/: class.rs  classloader.rs  executor.rs  heap.rs  lib.rs
src/class/: access_flags.rs  builtin_classes.rs  bytecode_classes.rs
src/class/builtin_classes/: array.rs  file_input_stream.rs  input_stream.rs  object.rs  print_stream.rs  string.rs  system.rs  throwable.rs
src/classloader/: attribute_parser.rs  class_creator.rs  constant_pool.rs  cp_decoder.rs  file_parser.rs  opcode_parser.rs  raw.rs
src/classloader/class_creator/: signature_parser.rs
src/executor/: frame_stack.rs  local_variables.rs  op_code.rs  program_counter.rs
tests/: array.rs  constructor.rs  control_flow.rs  exceptions.rs  hello_world.rs  inheritance.rs  input.rs  instance_function.rs  primitive.rs  static_functions.rs  two_classes.rs
tests/data/array/: Main.javap
tests/data/constructor/: Main.java  Main.javap
tests/data/control_flow/: Main.java  Main.javap
tests/data/hello_world/: Main.java  Main.javap
tests/data/input/: Main.java  Main.javap
tests/data/instance_function/: Main.java  Main.javap
tests/data/static_functions/: Main.java  Main.javap
tests/data/two_classes/: Auxiliary.java  (+3 more)
tests/exceptions/: nested.rs  simple.rs  subtype.rs  uncaught.rs
tests/inheritance/: shadowed_field.rs  simple.rs  simple_with_polymorphism.rs
tests/primitive/: double.rs  float.rs  int.rs  long.rs
(+41 files in other folders)
