[package]
name = "cmjava"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "cmjava"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["cargo", "derive"] }
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["time", "env-filter"] }
tracing-unwrap = { version = "0.10.0", features = ["log-location"] }
nom = "7.1.3"
strum = { version = "0.25.0", features = ["derive"] }
enumflags2 = "0.7.8"

[build-dependencies]
vergen = { version = "8.2.5", features = ["build", "cargo", "git", "rustc", "si", "gitoxide"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
